First release updated

--- a/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
@@ -66,22 +66,24 @@
             </a>
 
             <div class="nav-collapse collapse">
-                <form class="navbar-search pull-left" action="" _lpchecked="1">
-                    <input class="search-query" placeholder="Search" style="width: 120px" type="text">
-                </form>
+                {#<form class="navbar-search pull-left" action="" _lpchecked="1">#}
+                    {#<input class="search-query" placeholder="Search" style="width: 120px" type="text">#}
+                {#</form>#}
                 <ul class="nav pull-right">
                     <li class="separator"></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle usermenu" data-toggle="dropdown">
-                            <img alt="Avatar" src="{{ asset('bundles/maklarresursadmin/images/avatar.png') }}">
+                            {% for images in app.user.getAvatars()|slice(0,1) %}
+                                <img src="{{ asset('uploads/users/') }}{{ app.user.id }}/{{ images.image }}" alt="" />
+                            {% endfor %}
                             <span>&nbsp;&nbsp;{{ app.user.firstName }}</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#">Profile</a>
+                                <a href="{{ path('admin_profile') }}">Profile</a>
                             </li>
                             <li>
-                                <a href="#">Settings</a>
+                                <a href="{{ path('admin_change_password') }}">Change Password</a>
                             </li>
                             <li>
                                 <a href="/logout">Logout</a>
@@ -106,9 +108,9 @@
             <li class="lp-dropdown">
                 <a href="#" class="lp-dropdown-toggle" id="lappning-dropdown"><span class="icon-reorder"></span>User</a>
             </li>
-            <li class="lp-dropdown">
-                <a href="#" class="lp-dropdown-toggle" id="boka-dropdown"><span class="icon-reorder"></span>Address</a>
-            </li>
+            {#<li class="lp-dropdown">#}
+                {#<a href="#" class="lp-dropdown-toggle" id="boka-dropdown"><span class="icon-reorder"></span>Address</a>#}
+            {#</li>#}
             <li>
                 <a href="{{ path('admin_orders_lappning') }}"><span class="icon-user-md"></span>Lappnings</a>
             </li>
