--- a/src/Maklarresurs/AppBundle/Resources/views/Login/login.html.twig
+++ b/src/Maklarresurs/AppBundle/Resources/views/Login/login.html.twig
@@ -1,116 +1,93 @@
-<style>
-    input{
-        border: 1px solid #ccc;
-        height: 30px;
-        padding: 5px;
-        border-radius: 3px;
-    }
-    input[type=submit]{
-        height: 25px;
-    }
-    .header_login{
-        margin: 0 auto; width: 90%; height: auto; background-color: blue; text-align: center; padding: 10px 10px 20px 10px; border-radius: 3px;background-image: -webkit-linear-gradient(top, #007CB7, #003869);
-        border-top: 1px solid #00A2ED;
-        background-color: #003869;
-        background-image: linear-gradient(to bottom, #007CB7, #003869);
-        background-image: -webkit-gradient(linear, left top, left bottom, from(#007CB7), to(#003869));
-        background-image: -webkit-linear-gradient(top, #007CB7, #003869);
-        background-image: -moz-linear-gradient(top, #007CB7, #003869);
-        background-image: -webkit-linear-gradient(top, #007CB7, #003869);
-        background-image: -o-linear-gradient(top, #007CB7, #003869);
-        background-image: ms-linear-gradient(to bottom, #007CB7, #003869);
-        -pie-background: linear-gradient(to bottom, #007CB7, #003869);
-    }
-    www.maklarresurs.nu/media="all"
-    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
-        border: 0;
-        /* outline: 0; */
-        font-size: 100%;
-        vertical-align: baseline;
-        background: transparent;
-        margin: 0;
-        padding: 0;
-    }
-    user agent stylesheetdiv {
-        display: block;
-    }
-    Pseudo ::selection element
-    www.maklarresurs.nu/media="all"
-    ::selection {
-        background:
-    }
-    .logo-text {
-        font-weight: 700;
-        font-size: 1.5em;
-        letter-spacing: -.5px;
-        color: #FFF;
-        padding-left: 7px;
-        word-spacing: 4px;
-    }
-    table{
-        margin: 0 auto;
-        padding-top: 20px;
-    }
-    table td{
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: 13px;
-        color: #2E4452;
-    }
-</style>
 
-<!-- ***************** - Main Content Area - ***************** -->
-<div id="main" class="tt-slider-karma-custom-jquery-1">
-    <div class="main-area" style="padding-top: 150px">
-        <div class="spbox3" style="margin: 0 auto; width: 30%; height: auto; background: #ffffff; border: 1px solid #cccccc; border-radius: 5px; padding: 15px;">
-            <div class="header_login">
-                <img style="margin-bottom: -17px;" src="http://www.maklarresurs.nu/wp-content/themes/Karma/images/_global/custom-logo-2.png" alt="Mäklarresurs AB">
-                <span class="logo-text">Mäklarresurs</span>
+<!DOCTYPE html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>
+        Mäklarresurs AB - Sign In
+    </title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+
+    <script src="{{ asset('bundles/maklarresursadmin/js/adminflare-demo-init.js') }}" type="text/javascript"></script>
+
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel="stylesheet" type="text/css">
+
+    <link href="{{ asset('bundles/maklarresursadmin/css/bootstrap.css') }}" media="all" rel="stylesheet" type="text/css" id="bootstrap-css">
+    <link href="{{ asset('bundles/maklarresursadmin/css/adminflare.css') }}" media="all" rel="stylesheet" type="text/css" id="adminflare-css">
+    <link href="http://adminflare-130.herokuapp.com/assets/css/1.3.0/pages.min.css" rel="stylesheet" type="text/css">
+
+
+    <script src="{{ asset('bundles/maklarresursadmin/js/modernizr-jquery.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/maklarresursadmin/js/adminflare-demo.js') }}" type="text/javascript"></script>
+
+    <!--[if lte IE 9]>
+    <script src="assets/javascripts/jquery.placeholder.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('input, textarea').placeholder();
+        });
+    </script>
+    <![endif]-->
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+
+
+            var updateBoxPosition = function() {
+                $('#signin-container').css({
+                    'margin-top': ($(window).height() - $('#signin-container').height()) / 2
+                });
+            };
+            $(window).resize(updateBoxPosition);
+            setTimeout(updateBoxPosition, 50);
+        });
+    </script>
+
+    <style>
+        #theme_switcher {
+            display: none;
+        }
+    </style>
+</head>
+<body class="signin-page">
+
+<!-- Page content
+    ================================================== -->
+<section id="signin-container">
+    <a href="#" title="AdminFlare" class="header" style="width: auto;">
+        <img src="http://online.maklarresurs.nu/wp-content/themes/Karma/images/_global/custom-logo-2.png" alt="Sign in to Mäklarresurs AB">
+			<span>
+				Sign in to<br>
+				<strong>Mäklarresurs AB</strong>
+			</span>
+    </a>
+    <form action="{{ path("_login_check") }}" method="post">
+        {% if(_redir is defined) %}
+            <input type="hidden" name="_redir" value="{{_redir}}" />
+        {% endif %}
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+        {% if error %}
+            <div style="color:red; text-align: center">{{ error }}</div>
+        {% endif %}
+
+        <fieldset>
+            <div class="fields">
+                <input type="text" id="username" name="_username" placeholder="Username"  tabindex="1">
+
+                <input type="password" id="password" name="_password" placeholder="Password" tabindex="2">
             </div>
+            {#<a href="#" title="" tabindex="3" class="forgot-password">Forgot?</a>#}
 
-            <form action="{{ path("_login_check") }}" method="post">
-                <div class="form clear">
-                    {% if(_redir is defined) %}
-                        <input type="hidden" name="_redir" value="{{_redir}}" />
-                    {% endif %}
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-                    {% if error %}
-                        <div style="color:red; text-align: center">{{ error }}</div>
-                    {% endif %}
+            <button type="submit" class="btn btn-primary btn-block" tabindex="4">Sign In</button>
+        </fieldset>
+    </form>
 
-                    <table>
-                        <tr>
-                            <td>Username :</td>
-                            <td><input type="text" id="username" name="_username"  required="required" ></td>
-                        </tr>
-                        <tr>
-                            <td>Password :</td>
-                            <td><input type="password" id="password" name="_password"  required="required" ></td>
-                        </tr>
-                        <tr>
-                            <td>&nbsp;</td>
-                            <td>
-                                <div style="float: left">
-                                    <input type="checkbox" id="remember_me" name="_remember_me" value="on" checked="checked" >
-                                </div>
-                                <div style="float: left; padding: 9px;">
-                                    Remember me
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>&nbsp;</td>
-                            <td><input type="submit" placeholder="" value="LOGIN" style="height: auto; padding: 8px;"/></td>
-                        </tr>
+</section>
 
-                    </table>
-                </div>
-                <!-- /col-md-3 -->
-            </form>
-        </div>
-
-    </div><!-- END main-area -->
-
-    <div id="footer-top">&nbsp;</div>
-</div><!-- END main -->
-
+</body>
+</html>
