--- a/src/Maklarresurs/SupplierBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Maklarresurs/SupplierBundle/Resources/views/Dashboard/index.html.twig
@@ -26,28 +26,26 @@
     <h3 class="box-header">inställningar</h3>
     <div class="box">
         <div class="row-fluid" style="margin-bottom: 20px">
-            <a href="#" class="btn  quick-btn span2">
+            <a href="{{ path('supplier_profile') }}" class="btn  quick-btn span2">
                 <i class="icon-user"></i>
                 <span class="quick-btn-title">VISA <br> PROFIL </span>
             </a>
-            <a href="#" class="btn btn-green quick-btn span2">
+            <a href="{{ path('supplier_profile_edit') }}" class="btn btn-green quick-btn span2">
                 <i class="icon-wrench"></i>
                 <span class="quick-btn-title">EDITERA <br> PROFIL </span>
             </a>
-            <a href="#" class="btn btn-orange quick-btn span2">
+            <a href="{{ path('supplier_change_password') }}" class="btn btn-orange quick-btn span2">
                 <i class="icon-key"></i>
                 <span class="quick-btn-title">Byt <br> lösenord</span>
             </a>
-            <a href="#" class="btn btn-orange quick-btn span2">
+            <a href="{{ path('supplier_avater_img_uploads') }}" class="btn btn-orange quick-btn span2">
                 <i class="icon-picture"></i>
                 <span class="quick-btn-title">Uppdatera <br> profilbild</span>
             </a>
-            <a href="{{ path('fos_user_security_logout') }}" class="btn btn-red quick-btn span2">
+            <a href="/logout" class="btn btn-red quick-btn span2">
                 <i class="icon-lock"></i>
                 <span class="quick-btn-title">logga ut <br> &nbsp;</span>
             </a>
-
-
         </div>
 
     </div>
