--- a/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/index.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/index.html.twig
@@ -1,81 +1,58 @@
 {% extends 'MaklarresursUserBundle::layout.html.twig' %}
-{% set pageClass = 'customer' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Users{% endblock %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/font-awesome.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/jquery-ui.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/icheck/flat/blue.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/select2.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.red.css') }}" class="skin-color" />
-
-{% endblock %}
 
 
 {% block body %}
-    <div id="content">
-        <div id="content-header">
-            <h1>BOKA-VISNINGSVARD</h1>
-        </div>
-        <div id="breadcrumb">
-            <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
-            <a href="#" class=""> Order</a>
-            <a href="#" class="">Vasastan</a>
-            <a href="#" class="current">Addresses</a>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
 
-                <div class="widget-box">
+    <style type="text/css">
+        #theme_switcher {
+            display: none;
+        }
 
-                        <div class="widget-content nopadding">
-                            <table class="table table-bordered table-striped table-hover ">
-                                <thead>
-                                <tr>
-                                    <th>Start Date</th>
-                                    <th>End Date</th>
-                                    <th>Start Time</th>
-                                    <th>End Time</th>
-                                    <th>Address</th>
-                                    <th>Note</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for entity in entities %}
-                                    <tr class="gradeA item" id="{{ entity.id }}">
-                                        <td>{{ entity.startDate }}</td>
-                                        <td>{{ entity.endDate }}</td>
-                                        <td>{{ entity.startTime }}</td>
-                                        <td>{{ entity.endTime }}</td>
-                                        <td>{{ entity.address }}</td>
-                                        <td>{{ entity.note }}</td>
-                                    </tr>
+        .quick-btn i {
+            /*font-size: 50px;*/
+        }
+        .quick-btn {
+            /*font-size: 17px;*/
+            font-weight: bold;
+        }
+    </style>
+    <h3 class="box-header">Boka Visningsvärd</h3>
+    <div class="box">
+        <div class="row-fluid" style="margin-bottom: 20px">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Start Date</th>
+                        <th>End Date</th>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                        <th>Address</th>
+                        <th>Note</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for entity in entities %}
+                        <tr class="gradeA item" id="{{ entity.id }}">
+                            <td>{{ entity.startDate }}</td>
+                            <td>{{ entity.endDate }}</td>
+                            <td>{{ entity.startTime }}</td>
+                            <td>{{ entity.endTime }}</td>
+                            <td>{{ entity.address }}</td>
+                            <td>{{ entity.note }}</td>
+                        </tr>
 
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                </div>
-            </div>
+                    {% endfor %}
+                </tbody>
+            </table>
+
         </div>
+
     </div>
-{% endblock %}
 
-{% block javascripts %}
-    <!-- ***************** - JavaScript Starts Here - ***************** -->
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery-ui.custom.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.icheck.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/select2.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.dataTables.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.jpanelmenu.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.nicescroll.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.tables.js') }}"></script>
 
 
 {% endblock %}
+
