--- a/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/overview.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/overview.html.twig
@@ -1,127 +1,70 @@
 {% extends 'MaklarresursUserBundle::layout.html.twig' %}
-{% set pageClass = 'customer' %}
 
 {% block title %}Dashboard{% endblock %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/font-awesome.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/jquery-ui.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/icheck/flat/blue.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/select2.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.red.css') }}" class="skin-color" />
-
-    <link rel="stylesheet" type="text/css" href="https://jonthornton.github.io/jquery-timepicker/jquery.timepicker.css" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/datepicker.css') }}" />
-
-    <style>
-        .form-horizontal .control-label {
-            padding-top: 10px;
-        }
-        input.time{
-            width: 90px;
-        }
-        input.date{
-            width: 120px;
-        }
-        textarea{
-            width: 450px;
-            height: 80px;
-        }
-    </style>
-{% endblock %}
 
 
 {% block body %}
-    <div id="content">
-        <div id="content-header">
-            <h1>BOKA-VISNINGSVARD</h1>
+
+    <style type="text/css">
+        #theme_switcher {
+            display: none;
+        }
+
+        .quick-btn i {
+            /*font-size: 50px;*/
+        }
+        .quick-btn {
+            /*font-size: 17px;*/
+            font-weight: bold;
+        }
+    </style>
+    <h3 class="box-header">Boka Visningsvärd</h3>
+    <div class="box">
+        <div class="row-fluid" style="margin-bottom: 20px">
+            <form class="form-horizontal" method="post" action="{{ path('user_boka_visningsvard_order_confirmation', {'id': entity.id}) }}">
+
+                <h3>Overview</h3>
+                <table class="table table-hover" >
+                    <tbody>
+                    <tr>
+                        <th>Start Date</th>
+                        <td>{{ entity.startDate }}</td>
+                    </tr>
+                    <tr>
+                        <th>End Date</th>
+                        <td>{{ entity.endDate }}</td>
+                    </tr>
+                    <tr>
+                        <th>Start Time</th>
+                        <td>{{ entity.startTime }}</td>
+                    </tr>
+                    <tr>
+                        <th>End Time</th>
+                        <td>{{ entity.endTime }}</td>
+                    </tr>
+                    <tr>
+                        <th>Address</th>
+                        <td>{{ entity.address }}</td>
+                    </tr>
+                    <tr>
+                        <th>Note</th>
+                        <td>{{ entity.note }}</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <a class="btn btn-dark-red" href="{{ path('user_boka_visningsvard_order_edit', {'id': entity.id}) }}">Edit</a>
+                            <button type="submit" class="btn btn-primary">CONFIRM</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </form>
+
         </div>
-        <div id="breadcrumb">
-            <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
-            <a href="#" class="current">Overview</a>
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="widget-box">
-                    <div class="widget-title">
-                        <span class="icon">
-                            <i class="icon-align-justify"></i>
-                        </span>
-                        <h5>Overview</h5>
-                    </div>
-                    <div class="widget-content nopadding">
 
-                        <form class="form-horizontal" method="post" action="{{ path('user_boka_visningsvard_order_confirmation', {'id': entity.id}) }}">
-                            <div class="form-group">
-                                <label class="control-label">Start Date : </label>
-                                <div class="controls">
-                                    {{ entity.startDate }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">End Date : </label>
-                                <div class="controls">
-                                    {{ entity.endDate }}
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="control-label">Start Time : </label>
-                                <div class="controls">
-                                    {{ entity.startTime }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">End Time : </label>
-                                <div class="controls">
-                                    {{ entity.endTime }}
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="control-label">Address: </label>
-                                <div class="controls">
-                                    {{ entity.address }}
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="control-label">Note : </label>
-                                <div class="controls">
-                                    {{ entity.note }}
-                                </div>
-                            </div>
-
-
-                            <div class="form-actions">
-                                <a class="btn btn-dark-red" href="{{ path('user_boka_visningsvard_order_edit', {'id': entity.id}) }}">Edit</a>
-                                <input type="submit" value="CONFIRM" class="btn btn-dark-red">
-                            </div>
-
-                        </form>
-
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    <!-- ***************** - JavaScript Starts Here - ***************** -->
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery-ui.custom.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.icheck.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/select2.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.dataTables.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.jpanelmenu.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.nicescroll.min.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.js') }}"></script>
-    <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.tables.js') }}"></script>
-
 
 
 
