--- a/src/Maklarresurs/UserBundle/Resources/views/Sample/overview.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Sample/overview.html.twig
@@ -39,17 +39,17 @@
                         <th>Address Type</th>
                         <td>{{ entity.addressType }}</td>
                     </tr>
-                    <tr>
-                        <th>Total Price</th>
-                        <td> {{ entity.price }}</td>
-                    </tr>
+                    {#<tr>#}
+                        {#<th>Total Price</th>#}
+                        {#<td> {{ entity.price }}</td>#}
+                    {#</tr>#}
                     <tr>
                         <td></td>
                         <td><button type="submit" class="btn btn-primary">CONFIRM</button></td>
                     </tr>
                     </tbody>
                 </table>
-
+            </form>
         </div>
 
     </div>
