First release updated

--- a/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/AdminBundle/Resources/views/layout.html.twig
@@ -112,10 +112,10 @@
                 {#<a href="#" class="lp-dropdown-toggle" id="boka-dropdown"><span class="icon-reorder"></span>Address</a>#}
             {#</li>#}
             <li>
-                <a href="{{ path('admin_orders_lappning') }}"><span class="icon-user-md"></span>Lappnings</a>
+                <a href="{{ path('admin_orders_lappning') }}"><span class=" icon-th-list"></span>Lappnings</a>
             </li>
             <li>
-                <a href="{{ path('admin_orders_boka') }}"><span class="icon-user-md"></span>Boka Visningsvard</a>
+                <a href="{{ path('admin_orders_boka') }}"><span class=" icon-list"></span>Boka Visningsvard</a>
             </li>
 
             <li>
