--- a/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/confirmed.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/confirmed.html.twig
@@ -9,7 +9,7 @@
     <div class="box">
         <div class="row-fluid" style="margin-bottom: 20px">
 
-            <h1>You Order Has Been Confirmed, Thank You!</h1>
+            <h1>Tack för din order!</h1>
 
         </div>
 
