--- a/src/Maklarresurs/UserBundle/Resources/views/Sample/overview.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Sample/overview.html.twig
@@ -28,15 +28,15 @@
                 <table class="table table-hover" >
                     <tbody>
                     <tr>
-                        <th>Flyers</th>
+                        <th>Antal föreningar</th>
                         <td>Total {{ entity.flyers }} st</td>
                     </tr>
                     <tr>
-                        <th>Paper Size</th>
+                        <th>Välj papperstorlek</th>
                         <td>{{ entity.paperSize }}</td>
                     </tr>
                     <tr>
-                        <th>Address Type</th>
+                        <th>Välj adresseringstyp</th>
                         <td>{{ entity.addressType }}</td>
                     </tr>
                     {#<tr>#}
